2001-11-02  Andrew Cagney  <ac131313@redhat.com>

	* utils.c (internal_verror): Restore calls to abort().
	Fix PR gdb/219.

2001-11-02  Andrew Cagney  <ac131313@redhat.com>

	* README: Mention problem with alpha-dec-osf5.1.

2001-11-02  Michael Chastain  <mec@shout.net>

        * MAINTAINERS: Update my entry.

2001-10-31  Andrew Cagney  <ac131313@redhat.com>

	From DJ Barrow.
	* s390-tdep.c: Include "value.h".
	(s390_gdbarch_init): Don't initialize find_solib_trampoline_target.

2001-10-31  Andrew Cagney  <ac131313@redhat.com>

	* remote-vx.c (net_wait): Fix typo from PIDGET change.

2001-10-31  Daniel Jacobowitz  <drow@mvista.com>

	* arm-linux-nat.c: Include <asm/ptrace.h> explicitly.

2001-10-30  GDB Administrator  <gdbadmin@sourceware.cygnus.com>

	* version.in: Bump version to 5.0.92.

2001-10-30  Andrew Cagney  <ac131313@redhat.com>

	* README, NEWS: Update for 5.1.

2001-10-24  Daniel Jacobowitz  <drow@mvista.com>

	* arm-linux-nat.c (fill_gregset): Do not check register_valid[].
	(fill_fpregset): Likewise.

2001-10-26  Orjan Friberg  <orjanf@axis.com>

	* cris-tdep.c (constraint): Loop through the whole cris_spec_regs
	struct, not just the NUM_SPECREGS first entries.
	(bdap_prefix): Read PC before autoincrement.

2001-10-21  Andrew Cagney  <ac131313@redhat.com>

	* top.c (print_gdb_version): Do not print ``(MI_OUT)''.  MI
	interface is always enabled.

2001-10-21  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/README: Fix a typo and tweak for GDB 5.1.

2001-10-20  Andrew Cagney  <ac131313@redhat.com>

	* alpha-nat.c: Include <alpha/coreregs.h> instead of
	<machine/reg.h>.
	(fetch_osf_core_registers): Define core_reg_mapping in a way that
	works on OSF5 as well as previous OSF versions.

2001-10-20  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (handle_load_dll): Avoid strlwr'ing loaded DLLs or cygwin
	may not be able to read them in certain situations.

2001-10-18  Andrew Cagney  <ac131313@redhat.com>

	* README: Mention problems with HP/UX.
